--- a/src/components/Testimonial/Testimonial.scss
+++ b/src/components/Testimonial/Testimonial.scss
@@ -1,3 +1,5 @@
+@use "~/styles/base/_colors.scss" as *;
+
 #testimonial {
   .clients {
     margin-top: 50px;
@@ -24,7 +26,7 @@
         }
       }
       .card {
-        background: rgba(236, 234, 227, 1);
+        background: $bg-primary;
         border-radius: 10px;
         border-color: #fff;
         .card-body {
