--- a/src/components/Testimonial/Testimonial.scss
+++ b/src/components/Testimonial/Testimonial.scss
@@ -18,7 +18,7 @@
         z-index: 1;
         left: 0;
         right: 0;
-        top: -50px;
+        top: 0;
         margin: 0 auto;
         img {
           width: 100px;
