Add animation and style components

--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,4 +1,14 @@
-@use '~/styles/base/_colors.scss' as *;
+@use "~/styles/base/_colors.scss" as *;
+@use "~/styles/base/mixins" as *;
+
 #footer {
   background-color: $primary;
+
+  .contact {
+    .col-md-6 {
+      @include mobile {
+        width: inherit;
+      }
+    }
+  }
 }
