--- a/src/components/Banner/Banner.scss
+++ b/src/components/Banner/Banner.scss
@@ -1,3 +1,5 @@
+@use "~/styles/base/mixins" as *;
+
 #banner-container {
   display: block;
   background: rgba(0, 0, 0, 0);
@@ -14,6 +16,14 @@
   height: 850px;
   position: relative;
 
+  @include mobile {
+    background-size: contain;
+    height: 300px;
+  }
+  @include tablet {
+    height: 550px;
+  }
+
   .banner-description {
     text-align: center;
     position: absolute;
@@ -22,12 +32,32 @@
     transform: translate(-10%, -10%);
     color: white;
 
+    @include mobile {
+      top: 40%;
+    }
+
     h1 {
       text-align: left;
+
+      @include mobile {
+        font-size: 20px;
+      }
     }
 
     p {
       text-align: left;
+
+       @include mobile {
+        font-size: 8px;
+      }
+    }
+
+    a {
+
+      @include mobile {
+        padding: 3px;
+        font-size: 10px;
+      }
     }
   }
 }
