--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -6,15 +6,44 @@
   padding-bottom: 20px;
   .nav-link {
     color: white;
-    padding-left: 15px!important;
-    padding-right: 15px!important;
+    padding-left: 15px !important;
+    padding-right: 15px !important;
+    position: relative;
 
-    &.active {
-      color: #ccc;
+    &::after {
+      position: absolute;
+      top: 100%;
+      left: 0;
+      width: 100%;
+      height: 4px;
+      background: rgba(0, 0, 0, 0.1);
+      content: "";
+      opacity: 0;
+      -webkit-transition:
+        opacity 0.3s,
+        -webkit-transform 0.3s;
+      -moz-transition:
+        opacity 0.3s,
+        -moz-transform 0.3s;
+      transition:
+        opacity 0.3s,
+        transform 0.3s;
+      -webkit-transform: translateY(10px);
+      -moz-transform: translateY(10px);
+      transform: translateY(10px);
     }
 
-    &:hover {
-      color: brown;
+    &.active{
+      color: white;
+    }
+
+    &.active::after,
+    &:hover::after,
+    &:focus::after {
+      opacity: 1;
+      -webkit-transform: translateY(0px);
+      -moz-transform: translateY(0px);
+      transform: translateY(0px);
     }
   }
 }
