Change banner id

--- a/src/components/Banner/Banner.scss
+++ b/src/components/Banner/Banner.scss
@@ -1,6 +1,6 @@
 @use "~/styles/base/mixins" as *;
 
-#banner-container {
+#banner {
   display: block;
   background: rgba(0, 0, 0, 0);
   background-image: url(//d9hhrg4mnvzow.cloudfront.net/unbouncepages.com/coffeera/74872891-8zl70fbou9_10000000rs0hi00000i01o.jpg);
