--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -4,7 +4,13 @@
   background-color: $primary !important;
   padding-top: 20px;
   padding-bottom: 20px;
-  .nav-link {
+  a {
+    display: block;
+    padding: 0.5rem 1rem;
+    color: #0d6efd;
+    text-decoration: none;
+    transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out;
+    cursor: pointer;
     color: white;
     padding-left: 15px !important;
     padding-right: 15px !important;
