--- a/src/components/Products/Products.scss
+++ b/src/components/Products/Products.scss
@@ -1,7 +1,7 @@
 @use "~/styles/base/_colors.scss" as *;
 
 #products {
-  background-color: $bg-primary;
+  background-color: #fff;
   .container {
     z-index: 35;
     position: relative;
