--- a/src/components/Banner/Banner.scss
+++ b/src/components/Banner/Banner.scss
@@ -3,7 +3,7 @@
 #banner {
   display: block;
   background: rgba(0, 0, 0, 0);
-  background-image: url(//d9hhrg4mnvzow.cloudfront.net/unbouncepages.com/coffeera/74872891-8zl70fbou9_10000000rs0hi00000i01o.jpg);
+  background-image: url("~/assets/banner.png");
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
@@ -22,42 +22,5 @@
   }
   @include tablet {
     height: 550px;
-  }
-
-  .banner-description {
-    text-align: center;
-    position: absolute;
-    top: 50%;
-    left: 60%;
-    transform: translate(-10%, -10%);
-    color: white;
-
-    @include mobile {
-      top: 40%;
-    }
-
-    h1 {
-      text-align: left;
-
-      @include mobile {
-        font-size: 20px;
-      }
-    }
-
-    p {
-      text-align: left;
-
-       @include mobile {
-        font-size: 8px;
-      }
-    }
-
-    a {
-
-      @include mobile {
-        padding: 3px;
-        font-size: 10px;
-      }
-    }
   }
 }
