--- a/src/components/Products/ProductItem/ProductItem.scss
+++ b/src/components/Products/ProductItem/ProductItem.scss
@@ -22,8 +22,8 @@
 
   figure {
     margin: 0;
-    padding: 0;
-    aspect-ratio: 16 / 9;
+    padding: 0!important;
+    aspect-ratio: 1 / 1;
     overflow: hidden;
     margin: 15px;
     padding: 20px 10px;
@@ -34,6 +34,7 @@
 
     img {
       max-width: 100%;
+      height: 100%;
       transform-origin: center;
       transform: scale(var(--img-scale));
       transition: transform 0.4s ease-in-out;
